methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:5: error: ':' expected but ')' found.
def hunt(x) {while (!estSurBiscuit())
          ^SlugSnail:25: error: identifier expected but '}' found.
}
^